HTML buttons set and some tables created

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,24 @@
     <link rel="stylesheet" href="./vendors/bootstrap.css.map">
     <title>To-Do List</title>
 </head>
+<h1>To-Do List</h1>
+
 <body>
-    <h1>To-Do List</h1>
+    <table>
+
+        <thead>
+            <th>Task</th>
+            <th>Completed</th>
+            <th>Delete</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Make this project done and beautiful</td>
+                <td><button id = "complete">Complete</button></td>
+                <td><button id = "delete">Delete</button></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
+
 </html>
