Render tasks written

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -45,7 +45,7 @@
         </thead>
         <!-- END TABLE INFO -->
         <!-- PLACEHOLDER INFO -->
-        <tbody>
+        <tbody id = "viewTasks">
             <tr>
                 <td>Make this project done and beautiful</td>
                 <td><button id = "complete">Complete</button></td>
