--- a/server/public/index.html
+++ b/server/public/index.html
@@ -19,10 +19,10 @@
 <!-- TABLE INPUT FIELD -->
 
 <h3>New Task:</h3>
-<input type="text" id="task" placeholder="Enter Task Here">
+<input type="text" id="taskName" placeholder="Enter Task Here">
 <!-- <form> -->
     <label for="priority">Choose priority level:</label>
-    <select name="cars" id="cars">
+    <select id="taskPriority">
         <option value="low">Low</option>
         <option value="medium">Medium</option>
         <option value="high">High</option>
