Info now appending to DOM from DB

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -40,8 +40,9 @@
     <table>
         <thead>
             <th>Task</th>
-            <th>Completed</th>
+            <th>Priority</th>
             <th>Delete</th>
+             <th>Finish the Task</th>
         </thead>
         <!-- END TABLE INFO -->
         <!-- PLACEHOLDER INFO -->
