Delete button working

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -23,9 +23,9 @@
 <!-- <form> -->
     <label for="priority">Choose priority level:</label>
     <select id="taskPriority">
-        <option value="low">Low</option>
-        <option value="medium">Medium</option>
-        <option value="high">High</option>
+        <option value="Low">Low</option>
+        <option value="Medium">Medium</option>
+        <option value="High">High</option>
     </select>
     <!-- <br><br> -->
     <!-- <input type="submit" value="Submit"> -->
