--- a/server/public/index.html
+++ b/server/public/index.html
@@ -41,6 +41,7 @@
         <thead>
             <th>Task</th>
             <th>Priority</th>
+            <th>Task Done?</th>
             <th>Delete</th>
              <th>Finish the Task</th>
         </thead>
