--- a/server/public/index.html
+++ b/server/public/index.html
@@ -37,22 +37,22 @@
 
     <!-- TABLE INFO -->
 
-    <table>
-        <thead>
-            <th>Task</th>
-            <th>Priority</th>
-            <th>Task Done?</th>
-            <th>Delete</th>
-             <th>Finish the Task</th>
+    <table class="table table-secondary">
+        <thead class = "table-secondary">
+            <th scope="col">Task</th>
+            <th scope="col">Priority</th>
+            <th scope="col">Delete</th>
+            <th scope="col">Task Done?</th>
+             <!-- <th>Finish the Task</th> -->
         </thead>
         <!-- END TABLE INFO -->
         <!-- PLACEHOLDER INFO -->
         <tbody id = "viewTasks">
-            <tr>
+            <!-- <tr>
                 <td>Make this project done and beautiful</td>
                 <td><button id = "complete">Complete</button></td>
                 <td><button id = "delete">Delete</button></td>
-            </tr>
+            </tr> -->
         </tbody>
         <!-- END PLACEHOLDER INFO -->
     </table>
