--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,14 +12,21 @@
     <link rel="stylesheet" href="./vendors/bootstrap.css.map">
     <title>To-Do List</title>
 </head>
-<body>
+<body id = "grad1">
 
-<h1>To-Do List</h1>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-4">To Do List</h1>
+        <p class="lead">This is a an application used to track tasks, and help time management based upon priority.</p>
+    </div>
+</div>
 
 <!-- TABLE INPUT FIELD -->
+<div class = "container rounded" id = "rcorners2">
+
 
 <h3>New Task:</h3>
-<input type="text" id="taskName" placeholder="Enter Task Here">
+<input type="text" id="taskName" class="textEnter rounded" placeholder="Enter Task Here">
     <label for="priority">Choose priority level:</label>
     <select class="btn btn-primary dropdown-toggle" id="taskPriority">
         <option value="Low">Low</option>
@@ -27,21 +34,21 @@
         <option value="High">High</option>
     </select>
     <button class="btn btn-primary" id="submit">Submit New Task</button>
-
 <!-- END TABLE INPUT FIELD -->
 
     <!-- TABLE INFO -->
-    <table class="table table-secondary">
-        <thead class = "table-secondary">
+    <table class="table table-primary table-hover rounded">
+        <thead class = "table-primary">
             <th scope="col">Task</th>
             <th scope="col">Priority</th>
             <th scope="col">Delete</th>
             <th scope="col">Task Done?</th>
         </thead>
         <!-- END TABLE INFO -->
-        <tbody id = "viewTasks">
+        <tbody class= "rounded" id="viewTasks">
         </tbody>
     </table>
+    </div>
 </body>
 
 </html>
