--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./vendors/jquery-3.3.1.min.js"></script>
+    <script src="./vendors/sweetalert.js"></script>
     <script src="./scripts/client.js"></script>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./vendors/bootstrap.css">
